--- a/index.html
+++ b/index.html
@@ -105,6 +105,20 @@
                     </div>
                 </div>
             </section>
+            <section class="welcome__video">
+                <div class="container">
+                    <h2 class="section-title welcome__video-title">
+                    WELCOME TO D&M LEASING
+                    </h2>
+                    <p class="welcome__video-text">
+                        Find out how easy it is to lease from D&M
+                    </p>
+                    <iframe class="welcome__video-video" width="1000" height="500" src="https://www.youtube.com/embed/ahdCJUqb254?si=9vJpd74RJETIGmy2&amp;controls=0" title="YouTube video player" 
+                    frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin"
+                    allowfullscreen>
+                    </iframe>
+                </div>
+            </section>
         </main>
         <footer class="footer">
             <div class="container">
