create section important things

--- a/index.html
+++ b/index.html
@@ -119,6 +119,42 @@
                     </iframe>
                 </div>
             </section>
+            <section class="important-things">
+                <div class="container">
+                    <h2 class="section-title important-things__title">
+                        Important Things to Consider
+                    </h2>
+                    <p class="important-things__text">
+                        Depending on your circumstances and what is important to you, a lease could be a great option for your next vehicle. Below are some important factors that may influence your decision.
+                    </p>
+                    <ul class="important-things__list">
+                        <li class="important-things__list-item">
+                            <img src="images/important-1.png" alt="" class="important-things__list-img">
+                            <p class="important-things__list-text">
+                                Monthly payments on leases are generally 20% - 30% cheaper than loans
+                            </p>
+                        </li>
+                        <li class="important-things__list-item">
+                            <img src="images/important-2.png" alt="" class="important-things__list-img">
+                            <p class="important-things__list-text">
+                                You may be eligible for a tax break if you use the leased vehicle for business purposes
+                            </p>
+                        </li>
+                        <li class="important-things__list-item">
+                            <img src="images/important-3.png" alt="" class="important-things__list-img">
+                            <p class="important-things__list-text">
+                                Easy to upgrade to the newest vehicle model every few years
+                            </p>
+                        </li>
+                        <li class="important-things__list-item">
+                            <img src="images/important-4.png" alt="" class="important-things__list-img">
+                            <p class="important-things__list-text">
+                                There are often fees charged if you drive more than your lease's mileage allowance
+                            </p>
+                        </li>
+                    </ul>
+                </div>
+            </section>
         </main>
         <footer class="footer">
             <div class="container">
