--- a/contacts.html
+++ b/contacts.html
@@ -12,12 +12,12 @@
 <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz@0,14..32;1,14..32&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,700;1,14..32,700&display=swap" rel="stylesheet">
 </head>
-<body>
+<body class="contacts-page">
     <div class="wrapper">
         <header class="header">
             <div class="container">
                 <div class="header__inner">
-                    <a href="#" class="logo">
+                    <a href="index.html" class="logo">
                         <img src="images/logo.svg" alt="" class="logo__img">
                     </a>
                     <nav class="menu">
@@ -33,7 +33,22 @@
             </div>
         </header>
         <main class="main">
-
+            <section class="contacts">
+                <div class="container">
+                    <h2 class="section-title contacts-title">
+                        Contact Us
+                    </h2>
+                    <p class="contects-text">
+                        Feel free to contact us with questions, potencial partnerships or media inquiries
+                    </p>
+                    <form action="#" class="form">
+                        <input class="form___input" type="text" placeholder="Name">
+                        <input class="form___input" type="email" placeholder="E-mail">
+                        <textarea name="" class="form__textarea" placeholder="Your text"></textarea>
+                        <button class="form-btn" type="submit">Submit</button>
+                    </form>
+                </div>
+            </section>
         </main>
         <footer class="footer">
             <div class="container">
