--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,700;1,14..32,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
 </head>
-<body>
+<body class="home-page">
     <div class="wrapper">
         <header class="header header-main">
             <div class="container">
@@ -27,7 +27,7 @@
                             <li class="menu__list-item"><a href="#" class="menu__list-link">PRE-OWNED CARS</a></li>
                             <li class="menu__list-item"><a href="#" class="menu__list-link">FINANCE</a></li>
                             <li class="menu__list-item"><a href="#" class="menu__list-link">LEASE VS BUY</a></li>
-                            <li class="menu__list-item"><a href="#" class="menu__list-link">CONTACT US</a></li>
+                            <li class="menu__list-item"><a href="contacts.html" class="menu__list-link">CONTACT US</a></li>
                         </ul>
                     </nav>
                 </div>
@@ -169,7 +169,7 @@
                         <li class="footer__menu-item"><p class="footer__menu-title">Resources</p></li>
                         <li class="footer__menu-item"><a href="#" class="footer__menu-link">Blog</a></li>
                         <li class="footer__menu-item"><a href="#" class="footer__menu-link">FAQ</a></li>
-                        <li class="footer__menu-item"><a href="#" class="footer__menu-link">Contact</a></li>
+                        <li class="footer__menu-item"><a href="contacts.html" class="footer__menu-link">Contact</a></li>
                     </ul>
                     <ul class="footer__menu-list">
                         <li class="footer__menu-item"><p class="footer__menu-title">Work With TrueCar</p></li>
