--- a/contacts.html
+++ b/contacts.html
@@ -22,11 +22,11 @@
                     </a>
                     <nav class="menu">
                         <ul class="menu__list">
-                            <li class="menu__list-item"><a href="#" class="menu__list-link">NEW CARS</a></li>
+                            <li class="menu__list-item"><a href="new-car.html" class="menu__list-link">NEW CARS</a></li>
                             <li class="menu__list-item"><a href="#" class="menu__list-link">PRE-OWNED CARS</a></li>
                             <li class="menu__list-item"><a href="#" class="menu__list-link">FINANCE</a></li>
                             <li class="menu__list-item"><a href="#" class="menu__list-link">LEASE VS BUY</a></li>
-                            <li class="menu__list-item"><a href="#" class="menu__list-link">CONTACT US</a></li>
+                            <li class="menu__list-item"><a href="#" class="menu__list-link menu__list-link--active">CONTACT US</a></li>
                         </ul>
                     </nav>
                 </div>
@@ -38,7 +38,7 @@
                     <h2 class="section-title contacts-title">
                         Contact Us
                     </h2>
-                    <p class="contects-text">
+                    <p class="contacts-text">
                         Feel free to contact us with questions, potencial partnerships or media inquiries
                     </p>
                     <form action="#" class="form">
@@ -47,6 +47,23 @@
                         <textarea name="" class="form__textarea" placeholder="Your text"></textarea>
                         <button class="form-btn" type="submit">Submit</button>
                     </form>
+                </div>
+            </section>
+            <section class="blog">
+                <div class="container">
+                    <div class="blog__articles">
+                        <div class="blog__article">
+                            <img src="images/blog-1.png" alt="" class="blog__article-img">
+                            <h4 class="blog__article-title">An easier way to buy your next Toyota</h4>
+                            <a href="#" class="blog__article-link">more</a>
+                        </div>
+                        <div class="blog__article">
+                            <img src="images/blog-2.png" alt="" class="blog__article-img">
+                            <h4 class="blog__article-title">A Guide to Road-Tripping With Pets</h4>
+                            <a href="#" class="blog__article-link">more</a>
+                        </div>
+                    </div>
+                    <button class="blog__btn">show more</button>
                 </div>
             </section>
         </main>
