--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     </a>
                     <nav class="menu">
                         <ul class="menu__list">
-                            <li class="menu__list-item"><a href="#" class="menu__list-link">NEW CARS</a></li>
+                            <li class="menu__list-item"><a href="new-car.html" class="menu__list-link">NEW CARS</a></li>
                             <li class="menu__list-item"><a href="#" class="menu__list-link">PRE-OWNED CARS</a></li>
                             <li class="menu__list-item"><a href="#" class="menu__list-link">FINANCE</a></li>
                             <li class="menu__list-item"><a href="#" class="menu__list-link">LEASE VS BUY</a></li>
