--- a/new-car.html
+++ b/new-car.html
@@ -17,23 +17,39 @@
         <header class="header">
             <div class="container">
                 <div class="header__inner">
-                    <a href="#" class="logo">
+                    <a href="index.html" class="logo">
                         <img src="images/logo.svg" alt="" class="logo__img">
                     </a>
                     <nav class="menu">
                         <ul class="menu__list">
-                            <li class="menu__list-item"><a href="#" class="menu__list-link">NEW CARS</a></li>
+                            <li class="menu__list-item"><a href="new-car.html" class="menu__list-link menu__list-link--active">NEW CARS</a></li>
                             <li class="menu__list-item"><a href="#" class="menu__list-link">PRE-OWNED CARS</a></li>
                             <li class="menu__list-item"><a href="#" class="menu__list-link">FINANCE</a></li>
                             <li class="menu__list-item"><a href="#" class="menu__list-link">LEASE VS BUY</a></li>
-                            <li class="menu__list-item"><a href="#" class="menu__list-link">CONTACT US</a></li>
+                            <li class="menu__list-item"><a href="contacts.html" class="menu__list-link">CONTACT US</a></li>
                         </ul>
                     </nav>
                 </div>
             </div>
         </header>
         <main class="main">
-
+            <section class="blog">
+                <div class="container">
+                    <div class="blog__articles">
+                        <div class="blog__article">
+                            <img src="images/blog-1.png" alt="" class="blog__article-img">
+                            <h4 class="blog__article-title">An easier way to buy your next Toyota</h4>
+                            <a href="#" class="blog__article-link">more</a>
+                        </div>
+                        <div class="blog__article">
+                            <img src="images/blog-2.png" alt="" class="blog__article-img">
+                            <h4 class="blog__article-title">A Guide to Road-Tripping With Pets</h4>
+                            <a href="#" class="blog__article-link">more</a>
+                        </div>
+                    </div>
+                    <button class="blog__btn">show more</button>
+                </div>
+            </section>
         </main>
         <footer class="footer">
             <div class="container">
