create choose car page

--- a/contacts.html
+++ b/contacts.html
@@ -63,7 +63,7 @@
                             <a href="#" class="blog__article-link">more</a>
                         </div>
                     </div>
-                    <button class="blog__btn">show more</button>
+                    <button class="showmore__btn">show more</button>
                 </div>
             </section>
         </main>
