--- a/new-car.html
+++ b/new-car.html
@@ -12,7 +12,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz@0,14..32;1,14..32&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,700;1,14..32,700&display=swap" rel="stylesheet">
 </head>
-<body>
+<body class="cars-page">
     <div class="wrapper">
         <header class="header">
             <div class="container">
@@ -33,6 +33,132 @@
             </div>
         </header>
         <main class="main">
+            <section class="choose">
+                <div class="container">
+                    <h2 class="section-title">Choose your car</h2>
+                    <div class="tabs">
+                        <div class="tabs__btn">
+                            <button class="tabs__btn-item tabs__btn-item--active">Car and Minivan</button>
+                            <button class="tabs__btn-item">Trucks</button>
+                            <button class="tabs__btn-item">Crossovers & SUVs</button>
+                            <button class="tabs__btn-item">Electrified</button>
+                        </div>
+                        <div class="tabs__content">
+                            <div class="tabs__content-item">
+                                <div class="card">
+                                    <img src="images/choose-1.jpg" alt="" class="card__img">
+                                    <div class="card__content">
+                                        <h4 class="card__title">Toyota Crown 2023</h4>
+                                        <p class="card__text">starting from $ 39900</p>
+                                        <p class="card__price">$ 650/mo</p>
+                                    </div>
+                                    <a href="#" class="card__link">see details</a>
+                                </div>
+                                <div class="card">
+                                    <img src="images/choose-2.jpg" alt="" class="card__img">
+                                    <div class="card__content">
+                                        <h4 class="card__title">Toyota Crown 2023</h4>
+                                        <p class="card__text">starting from $ 39900</p>
+                                        <p class="card__price">$ 650/mo</p>
+                                    </div>
+                                    <a href="#" class="card__link">see details</a>
+                                </div>
+                                <div class="card">
+                                    <img src="images/choose-3.jpg" alt="" class="card__img">
+                                    <div class="card__content">
+                                        <h4 class="card__title">Toyota Crown 2023</h4>
+                                        <p class="card__text">starting from $ 39900</p>
+                                        <p class="card__price">$ 650/mo</p>
+                                    </div>
+                                    <a href="#" class="card__link">see details</a>
+                                </div>
+                                <div class="card">
+                                    <img src="images/choose-4.jpg" alt="" class="card__img">
+                                    <div class="card__content">
+                                        <h4 class="card__title">Toyota Crown 2023</h4>
+                                        <p class="card__text">starting from $ 39900</p>
+                                        <p class="card__price">$ 650/mo</p>
+                                    </div>
+                                    <a href="#" class="card__link">see details</a>
+                                </div>
+                                <div class="card">
+                                    <img src="images/choose-5.jpg" alt="" class="card__img">
+                                    <div class="card__content">
+                                        <h4 class="card__title">Toyota Crown 2023</h4>
+                                        <p class="card__text">starting from $ 39900</p>
+                                        <p class="card__price">$ 650/mo</p>
+                                    </div>
+                                    <a href="#" class="card__link">see details</a>
+                                </div>
+                                <div class="card">
+                                    <img src="images/choose-6.jpg" alt="" class="card__img">
+                                    <div class="card__content">
+                                        <h4 class="card__title">Toyota Crown 2023</h4>
+                                        <p class="card__text">starting from $ 39900</p>
+                                        <p class="card__price">$ 650/mo</p>
+                                    </div>
+                                    <a href="#" class="card__link">see details</a>
+                                </div>
+                                <div class="card">
+                                    <img src="images/choose-7.jpg" alt="" class="card__img">
+                                    <div class="card__content">
+                                        <h4 class="card__title">Toyota Crown 2023</h4>
+                                        <p class="card__text">starting from $ 39900</p>
+                                        <p class="card__price">$ 650/mo</p>
+                                    </div>
+                                    <a href="#" class="card__link">see details</a>
+                                </div>
+                                <div class="card">
+                                    <img src="images/choose-8.jpg" alt="" class="card__img">
+                                    <div class="card__content">
+                                        <h4 class="card__title">Toyota Crown 2023</h4>
+                                        <p class="card__text">starting from $ 39900</p>
+                                        <p class="card__price">$ 650/mo</p>
+                                    </div>
+                                    <a href="#" class="card__link">see details</a>
+                                </div>
+                                <div class="card">
+                                    <img src="images/choose-9.jpg" alt="" class="card__img">
+                                    <div class="card__content">
+                                        <h4 class="card__title">Toyota Crown 2023</h4>
+                                        <p class="card__text">starting from $ 39900</p>
+                                        <p class="card__price">$ 650/mo</p>
+                                    </div>
+                                    <a href="#" class="card__link">see details</a>
+                                </div>
+                                <div class="card">
+                                    <img src="images/choose-10.jpg" alt="" class="card__img">
+                                    <div class="card__content">
+                                        <h4 class="card__title">Toyota Crown 2023</h4>
+                                        <p class="card__text">starting from $ 39900</p>
+                                        <p class="card__price">$ 650/mo</p>
+                                    </div>
+                                    <a href="#" class="card__link">see details</a>
+                                </div>
+                                <div class="card">
+                                    <img src="images/choose-11.jpg" alt="" class="card__img">
+                                    <div class="card__content">
+                                        <h4 class="card__title">Toyota Crown 2023</h4>
+                                        <p class="card__text">starting from $ 39900</p>
+                                        <p class="card__price">$ 650/mo</p>
+                                    </div>
+                                    <a href="#" class="card__link">see details</a>
+                                </div>
+                                <div class="card">
+                                    <img src="images/choose-12.jpg" alt="" class="card__img">
+                                    <div class="card__content">
+                                        <h4 class="card__title">Toyota Crown 2023</h4>
+                                        <p class="card__text">starting from $ 39900</p>
+                                        <p class="card__price">$ 650/mo</p>
+                                    </div>
+                                    <a href="#" class="card__link">see details</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <button class="showmore__btn">show more</button>
             <section class="blog">
                 <div class="container">
                     <div class="blog__articles">
@@ -47,7 +173,7 @@
                             <a href="#" class="blog__article-link">more</a>
                         </div>
                     </div>
-                    <button class="blog__btn">show more</button>
+                    <button class="showmore__btn">show more</button>
                 </div>
             </section>
         </main>
