--- a/new-car.html
+++ b/new-car.html
@@ -48,7 +48,7 @@
                                 <div class="card">
                                     <img src="images/choose-1.jpg" alt="" class="card__img">
                                     <div class="card__content">
-                                        <h4 class="card__title">Toyota Crown 2023</h4>
+                                        <h4 class="card__title">Aston Martin 1963</h4>
                                         <p class="card__text">starting from $ 39900</p>
                                         <p class="card__price">$ 650/mo</p>
                                     </div>
@@ -57,108 +57,109 @@
                                 <div class="card">
                                     <img src="images/choose-2.jpg" alt="" class="card__img">
                                     <div class="card__content">
-                                        <h4 class="card__title">Toyota Crown 2023</h4>
-                                        <p class="card__text">starting from $ 39900</p>
-                                        <p class="card__price">$ 650/mo</p>
+                                        <h4 class="card__title">Volvo P1800 1969</h4>
+                                        <p class="card__text">starting from $ 62450</p>
+                                        <p class="card__price"> $ 450/mo</p>
                                     </div>
                                     <a href="#" class="card__link">see details</a>
                                 </div>
                                 <div class="card">
                                     <img src="images/choose-3.jpg" alt="" class="card__img">
                                     <div class="card__content">
-                                        <h4 class="card__title">Toyota Crown 2023</h4>
-                                        <p class="card__text">starting from $ 39900</p>
-                                        <p class="card__price">$ 650/mo</p>
+                                        <h4 class="card__title">VW Beetle 1975</h4>
+                                        <p class="card__text">starting from $ 27900</p>
+                                        <p class="card__price"> $ 400/mo</p>
                                     </div>
                                     <a href="#" class="card__link">see details</a>
                                 </div>
                                 <div class="card">
                                     <img src="images/choose-4.jpg" alt="" class="card__img">
                                     <div class="card__content">
-                                        <h4 class="card__title">Toyota Crown 2023</h4>
+                                        <h4 class="card__title">Ford Thunderbird 1967</h4>
                                         <p class="card__text">starting from $ 39900</p>
-                                        <p class="card__price">$ 650/mo</p>
+                                        <p class="card__price">$1,013/mo</p>
                                     </div>
                                     <a href="#" class="card__link">see details</a>
                                 </div>
                                 <div class="card">
                                     <img src="images/choose-5.jpg" alt="" class="card__img">
                                     <div class="card__content">
-                                        <h4 class="card__title">Toyota Crown 2023</h4>
+                                        <h4 class="card__title">Lamborghini 1966</h4>
                                         <p class="card__text">starting from $ 39900</p>
-                                        <p class="card__price">$ 650/mo</p>
+                                        <p class="card__price">$ 739/mo</p>
                                     </div>
                                     <a href="#" class="card__link">see details</a>
                                 </div>
                                 <div class="card">
                                     <img src="images/choose-6.jpg" alt="" class="card__img">
                                     <div class="card__content">
-                                        <h4 class="card__title">Toyota Crown 2023</h4>
-                                        <p class="card__text">starting from $ 39900</p>
-                                        <p class="card__price">$ 650/mo</p>
+                                        <h4 class="card__title">Jaguar E-Type 1960</h4>
+                                        <p class="card__text">starting from $ 62260</p>
+                                        <p class="card__price">$ 554/mo</p>
                                     </div>
                                     <a href="#" class="card__link">see details</a>
                                 </div>
                                 <div class="card">
                                     <img src="images/choose-7.jpg" alt="" class="card__img">
                                     <div class="card__content">
-                                        <h4 class="card__title">Toyota Crown 2023</h4>
-                                        <p class="card__text">starting from $ 39900</p>
-                                        <p class="card__price">$ 650/mo</p>
+                                        <h4 class="card__title">Shevrolet  1970</h4>
+                                        <p class="card__text">starting from $ 35650</p>
+                                        <p class="card__price">$ 1,032/mo</p>
                                     </div>
                                     <a href="#" class="card__link">see details</a>
                                 </div>
                                 <div class="card">
                                     <img src="images/choose-8.jpg" alt="" class="card__img">
                                     <div class="card__content">
-                                        <h4 class="card__title">Toyota Crown 2023</h4>
-                                        <p class="card__text">starting from $ 39900</p>
-                                        <p class="card__price">$ 650/mo</p>
+                                        <h4 class="card__title">Mercedes 300 1954</h4>
+                                        <p class="card__text">starting from $ 31885</p>
+                                        <p class="card__price">$ 997/mo</p>
                                     </div>
                                     <a href="#" class="card__link">see details</a>
                                 </div>
                                 <div class="card">
                                     <img src="images/choose-9.jpg" alt="" class="card__img">
                                     <div class="card__content">
-                                        <h4 class="card__title">Toyota Crown 2023</h4>
-                                        <p class="card__text">starting from $ 39900</p>
-                                        <p class="card__price">$ 650/mo</p>
+                                        <h4 class="card__title">Porsche 356 1959</h4>
+                                        <p class="card__text">starting from $ 32600</p>
+                                        <p class="card__price">$ 471/mo</p>
                                     </div>
                                     <a href="#" class="card__link">see details</a>
                                 </div>
                                 <div class="card">
                                     <img src="images/choose-10.jpg" alt="" class="card__img">
                                     <div class="card__content">
-                                        <h4 class="card__title">Toyota Crown 2023</h4>
-                                        <p class="card__text">starting from $ 39900</p>
-                                        <p class="card__price">$ 650/mo</p>
+                                        <h4 class="card__title">Pontiac GTO 1966</h4>
+                                        <p class="card__text">starting from $ 60000</p>
+                                        <p class="card__price">$ 528/mo</p>
                                     </div>
                                     <a href="#" class="card__link">see details</a>
                                 </div>
                                 <div class="card">
                                     <img src="images/choose-11.jpg" alt="" class="card__img">
                                     <div class="card__content">
-                                        <h4 class="card__title">Toyota Crown 2023</h4>
-                                        <p class="card__text">starting from $ 39900</p>
-                                        <p class="card__price">$ 650/mo</p>
+                                        <h4 class="card__title">Triumph TR6 1974</h4>
+                                        <p class="card__text">starting from $ 31885</p>
+                                        <p class="card__price">$ 591/mo</p>
                                     </div>
                                     <a href="#" class="card__link">see details</a>
                                 </div>
                                 <div class="card">
                                     <img src="images/choose-12.jpg" alt="" class="card__img">
                                     <div class="card__content">
-                                        <h4 class="card__title">Toyota Crown 2023</h4>
-                                        <p class="card__text">starting from $ 39900</p>
-                                        <p class="card__price">$ 650/mo</p>
+                                        <h4 class="card__title">Volkswagen 1966</h4>
+                                        <p class="card__text">starting from $ 28430</p>
+                                        <p class="card__price">$ 750/mo</p>
                                     </div>
                                     <a href="#" class="card__link">see details</a>
                                 </div>
                             </div>
                         </div>
                     </div>
+                    <button class="showmore__btn">show more</button>
                 </div>
             </section>
-            <button class="showmore__btn">show more</button>
+            
             <section class="blog">
                 <div class="container">
                     <div class="blog__articles">
@@ -235,5 +236,7 @@
             </div>
         </footer>
     </div>
+
+    <script src="js/main.js"></script>
 </body>
 </html>
